--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent" class="mat-elevation-z8">
-    <span>@@@</span>
+    <span>Booking Management</span>
     <span class="spacer"></span>
     <button routerLink="/" mat-button><mat-icon>home</mat-icon> Home</button>
     <button routerLink="/create" mat-button><mat-icon>add</mat-icon> Create</button>
